2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_node_free): Remove GC roots for array
	constructor closures.
	(pkl_ast_make_array_type): Initialize array type constructor
	closures to null and add GC roots for them.
	* src/pkl-ast.h (struct pkl_ast_type): New field `constructor' for
	array types.
	(PKL_AST_TYPE_S_CONSTRUCTOR): Define.
	* src/pkl-gen.c (pkl_gen_pr_decl): Compile constructor closures
	for array types.
	* src/pkl-gen.pks (array_constructor): New RAS function.

2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h: Remove prototype for pkl_ast_complete_scons.
	(struct pkl_ast_struct_field): Remove field `dummy'.
	(PKL_AST_STRUCT_FIELD_DUMMY): Delete.
	* src/pkl-ast.c (pkl_ast_complete_scons): Delete.
	(pkl_ast_type_defval): Delete.
	* src/pkl-trans.c (pkl_trans3_ps_scons): Delete.
	(pkl_phase_trans3): Deregister handler.
	* src/pkl-promo.c (pkl_promo_ps_scons): There is no more need to
	handle `dummy' fields in structs.
	* src/pkl-typify.c (pkl_typify1_ps_scons): Likewise.
	* src/pkl-gen.c (pkl_gen_pr_type_struct): If a constructor
	receives a null, turn it into an empty struct of the proper type.
	(pkl_gen_ps_scons): Struct constructors always have named types.

2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-insn.def (PKL_INSN_SREFNT): Define.
	* src/pvm.jitter (srefnt): New instruction.

2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_ps_type_integral): Handle in_constructor.
	(pkl_gen_ps_type_offset): Likewise.
	(pkl_gen_ps_type_string): Likewise.

2020-03-21  John Darrington <john@darrington.wattle.id.au>

	*src/pk-cmd.c (pk_cmd_exec_1): Check that cmd_name
	does not overflow.

2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ctf.pk: Updates.

2020-03-20  John Darrington <john@darrington.wattle.id.au>

	* src/pk-misc.c (strings): Declare as const and deal
	with consequences.
	* src/pkl-asm.c (cast_table): Declare as const.