@@ -1,5 +1,10 @@
 2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* src/pkl-gen.c (pkl_gen_pr_type_array): Handle in_constructor
+	cases.
+
+2020-03-21  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* src/pkl-ast.c (pkl_ast_node_free): Remove GC roots for array
 	constructor closures.
 	(pkl_ast_make_array_type): Initialize array type constructor
